// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LibraryPage visual regression > matches the library snapshot in dark theme 1`] = `
<div>
  <div
    class="xjp7ctv x1tgivj0 x9ynric xntwwlm"
    data-astryx-theme="neutral"
    data-theme="dark"
  >
    <div
      style="max-width: 900px; margin: 0px auto; padding: 24px;"
    >
      <section
        aria-label="Library"
        data-testid="library-page"
        style="display: flex; flex-direction: column; gap: 8px;"
      >
        <h1
          class="astryx-heading level-1 primary x1tgivj0 xcg7oai xfmsba7 x1v68xuy x1lliihq"
          data-color="primary"
          data-level="1"
        >
          Library
        </h1>
        <span
          class="astryx-text supporting secondary xv1l7n4 x141an7d x1ltkj2j xv8on6e xt0psk2"
          data-color="secondary"
          data-type="supporting"
        >
          Scan your music library to index albums and refresh metadata.
        </span>
        <button
          data-testid="scan-button-stub"
          type="button"
        >
          Scan library
        </button>
      </section>
    </div>
  </div>
</div>
`;

exports[`LibraryPage visual regression > matches the library snapshot in light theme 1`] = `
<div>
  <div
    class="xjp7ctv x1tgivj0 x9ynric x19aimcq"
    data-astryx-theme="neutral"
    data-theme="light"
  >
    <div
      style="max-width: 900px; margin: 0px auto; padding: 24px;"
    >
      <section
        aria-label="Library"
        data-testid="library-page"
        style="display: flex; flex-direction: column; gap: 8px;"
      >
        <h1
          class="astryx-heading level-1 primary x1tgivj0 xcg7oai xfmsba7 x1v68xuy x1lliihq"
          data-color="primary"
          data-level="1"
        >
          Library
        </h1>
        <span
          class="astryx-text supporting secondary xv1l7n4 x141an7d x1ltkj2j xv8on6e xt0psk2"
          data-color="secondary"
          data-type="supporting"
        >
          Scan your music library to index albums and refresh metadata.
        </span>
        <button
          data-testid="scan-button-stub"
          type="button"
        >
          Scan library
        </button>
      </section>
    </div>
  </div>
</div>
`;
